--- a/.github/workflows/test-reusable-workflow.yml
+++ b/.github/workflows/test-reusable-workflow.yml
@@ -4,11 +4,10 @@ jobs:
   get-runs-on:
     runs-on: ubuntu-latest
     steps:
-      - uses: socialdatabase/gh-actions-runner/.github/workflows/check-runner-available.yml@main
+      - uses: socialdatabase/gh-actions-runner@main
 
   test:
-    # runs-on: ${{ steps.get-runs-on.outputs.runs-on }}
-    runs-on: ubuntu-latest
+    runs-on: ${{ steps.get-runs-on.outputs.runs-on }}
     steps:
       - run: echo ${{ steps.get-runs-on.outputs.runs-on }}
 
