Test the actual action

--- a/.github/workflows/test-reusable-workflow.yml
+++ b/.github/workflows/test-reusable-workflow.yml
@@ -7,7 +7,7 @@ jobs:
       - uses: socialdatabase/gh-actions-runner@main
 
   test:
-    runs-on: ${{ steps.get-runs-on.outputs.runs-on }}
+    runs-on: [ "${{ steps.get-runs-on.outputs.runs-on }}" ]
     steps:
       - run: echo ${{ steps.get-runs-on.outputs.runs-on }}
 
