--- a/.github/workflows/test-reusable-workflow.yml
+++ b/.github/workflows/test-reusable-workflow.yml
@@ -7,7 +7,8 @@ jobs:
       - uses: socialdatabase/gh-actions-runner@main
 
   test:
-    runs-on: [ "${{ steps.get-runs-on.outputs.runs-on }}" ]
+    # runs-on: [ self-hosted, "${{ steps.get-runs-on.outputs.runs-on }}" ]
+    runs-on: ubuntu-latest
     steps:
       - run: echo ${{ steps.get-runs-on.outputs.runs-on }}
 
