--- a/.github/workflows/test-reusable-workflow.yml
+++ b/.github/workflows/test-reusable-workflow.yml
@@ -5,11 +5,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: socialdatabase/gh-actions-runner@test-workflow
+        with:
+          runner_cfg_pat: ${{ secrets.RUNNER_CFG_PAT }}
 
   test:
     # runs-on: [ self-hosted, "${{ steps.get-runs-on.outputs.runs-on }}" ]
     runs-on: ubuntu-latest
     steps:
-      - run: echo ${{ steps.get-runs-on.outputs.runs-on }}
+      - run: echo "${{ steps.get-runs-on.outputs }}"
 
   
