--- a/action.yml
+++ b/action.yml
@@ -12,5 +12,13 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - run: RUNNER_CFG_PAT=${{ inputs.runner_cfg_pat }} check_runner_available.sh
+    - run: >
+        STATUSSES=$(curl -s
+          -H "Accept: application/vnd.github+json"
+          -H "Authorization: Bearer ${{ inputs.runner_cfg_pat }}
+          https://api.github.com/orgs/socialdatabase/actions/runners | jq '.runners[].status') 
+        && 
+        if [[ "$STATUSSES" =~ .*"online".* ]]; then
+          echo "runs-on=[self-hosted]" >> $GITHUB_OUTPUT
+        else echo "runs-on=ubuntu-latest" >> $GITHUB_OUTPUT
       shell: bash
