--- a/.github/workflows/test-reusable-workflow.yml
+++ b/.github/workflows/test-reusable-workflow.yml
@@ -1,19 +1,25 @@
 name: Check for availabilty of self-hosted runner
-on: [push]
+# on: [push]
+on: 
+  workflow_dispatch:
+
 jobs:
   get-runs-on:
     runs-on: ubuntu-latest
+    outputs:
+      runs-on: ${{ steps.get-runs-on.outputs.runs-on }}
     steps:
       - uses: socialdatabase/gh-actions-runner@test-workflow
         id: get-runs-on
         with:
           runner_cfg_pat: ${{ secrets.RUNNER_CFG_PAT }}
+      - run: echo runs on ${{ steps.get-runs-on.outputs.runs-on }}
+        shell: bash
 
-  test:
-    # runs-on: [ "${{ steps.get-runs-on.outputs.runs-on }}" ]
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "${{ steps.get-runs-on.outputs }}"
-      - run: echo "${{ steps.get-runs-on.outputs.runs-on }}"
+  # test:
+  #   # runs-on: [ "${{ steps.get-runs-on.outputs.runs-on }}" ]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - run: echo "${{ steps.get-runs-on.outputs }}"
+  #     - run: echo "${{ steps.get-runs-on.outputs.runs-on }}"
 
-  
