--- a/.github/workflows/test-reusable-workflow.yml
+++ b/.github/workflows/test-reusable-workflow.yml
@@ -15,6 +15,8 @@ jobs:
           runner_cfg_pat: ${{ secrets.RUNNER_CFG_PAT }}
       - run: echo runs on ${{ steps.get-runs-on.outputs.runs-on }}
         shell: bash
+      - run: echo runs on $GITHUB_OUTPUT
+        shell: bash
 
   # test:
   #   # runs-on: [ "${{ steps.get-runs-on.outputs.runs-on }}" ]
