--- a/action.yml
+++ b/action.yml
@@ -19,10 +19,12 @@ runs:
           https://api.github.com/orgs/socialdatabase/actions/runners | jq '.runners[].status')
         if [[ "$STATUSSES" =~ .*"online".* ]]; then
           echo "Using self-hosted"
-          echo "runs-on=self-hosted" >> $GITHUB_OUTPUT
+          # echo "runs-on=self-hosted" >> $GITHUB_OUTPUT
+          echo "::set-output name=runs-on::self-hosted"
         else 
           echo "Using ubuntu-latest"
-          echo "runs-on=ubuntu-latest" >> $GITHUB_OUTPUT
+          # echo "runs-on=ubuntu-latest" >> $GITHUB_OUTPUT
+          echo "::set-output name=runs-on::ubuntu-latest"
         fi
       env:
         RUNNER_CFG_PAT: ${{ inputs.runner_cfg_pat }}
