--- a/action.yml
+++ b/action.yml
@@ -19,13 +19,12 @@ runs:
           https://api.github.com/orgs/socialdatabase/actions/runners | jq '.runners[].status')
         if [[ "$STATUSSES" =~ .*"online".* ]]; then
           echo "Using self-hosted"
-          # echo "runs-on=self-hosted" >> $GITHUB_OUTPUT
-          echo "::set-output name=runs-on::self-hosted"
+          echo "runs-on=self-hosted" >> $GITHUB_OUTPUT
         else 
           echo "Using ubuntu-latest"
-          # echo "runs-on=ubuntu-latest" >> $GITHUB_OUTPUT
-          echo "::set-output name=runs-on::ubuntu-latest"
+          echo "runs-on=ubuntu-latest" >> $GITHUB_OUTPUT
         fi
+        cat $GITHUB_OUTPUT 
       env:
         RUNNER_CFG_PAT: ${{ inputs.runner_cfg_pat }}
       shell: bash
