--- a/action.yml
+++ b/action.yml
@@ -8,7 +8,7 @@ inputs:
 outputs:
   runs-on:
     description: The `runs-on` variable to use for the workflow
-    value: ${{ steps.get-runs-on.outputs.runs-on }}
+    value: ${{ steps.check-availability.outputs.runs-on }}
 runs:
   using: "composite"
   steps:
