--- a/action.yml
+++ b/action.yml
@@ -49,5 +49,5 @@ runs:
     - id: random-number-generator
       run: echo "random-number=4" >> $GITHUB_OUTPUT
       shell: bash
-    - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
-      shell: bash
+    # - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
+    #   shell: bash
