--- a/action.yml
+++ b/action.yml
@@ -48,5 +48,20 @@ runs:
     - id: random-number-generator
       run: echo "random-number=4" >> $GITHUB_OUTPUT
       shell: bash
-    - run: echo ${{ inputs.runner_cfg_pat }}
+    - id: check-availability
+      run: |
+        STATUSSES=$(curl -s \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer $RUNNER_CFG_PAT" \
+          https://api.github.com/orgs/socialdatabase/actions/runners | jq '.runners[].status')
+        if [[ "$STATUSSES" =~ .*"online".* ]]; then
+          echo "Using self-hosted"
+          echo "runs-on=self-hosted" >> $GITHUB_OUTPUT
+        else 
+          echo "Using ubuntu-latest"
+          echo "runs-on=ubuntu-latest" >> $GITHUB_OUTPUT
+        fi
+        cat $GITHUB_OUTPUT 
+      env:
+        RUNNER_CFG_PAT: ${{ inputs.runner_cfg_pat }}
       shell: bash
