--- a/.github/workflows/test-reusable-workflow.yml
+++ b/.github/workflows/test-reusable-workflow.yml
@@ -1,23 +1,19 @@
-# name: Check for availabilty of self-hosted runner
-# on: 
-#   push:
-#   workflow_dispatch:
+name: Check for availabilty of self-hosted runner
+on: 
+  push:
+  workflow_dispatch:
 
-# jobs:
-#   get-runs-on:
-#     runs-on: ubuntu-latest
-#     # outputs:
-#     #   runs-on: ${{ steps.get-runs-on.outputs.runs-on }}
-#     steps:
-#       - uses: actions/checkout@v3
-#       - uses: socialdatabase/gh-actions-runner@test-workflow
-#         id: get-runs-on
-#         with:
-#           runner_cfg_pat: ${{ secrets.RUNNER_CFG_PAT }}
-#       - run: echo runs on ${{ steps.get-runs-on.outputs.runs-on }}
-#         shell: bash
-#       - run: cat $GITHUB_OUTPUT
-#         shell: bash
+jobs:
+  get-runs-on:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: socialdatabase/gh-actions-runner@test-workflow
+        id: get-runs-on
+        with:
+          runner_cfg_pat: ${{ secrets.RUNNER_CFG_PAT }}
+      - run: echo runs on ${{ steps.get-runs-on.outputs.runs-on }}
+        shell: bash
 
 #   # test:
 #   #   # runs-on: [ "${{ steps.get-runs-on.outputs.runs-on }}" ]
@@ -26,19 +22,19 @@
 #   #     - run: echo "${{ steps.get-runs-on.outputs }}"
 #   #     - run: echo "${{ steps.get-runs-on.outputs.runs-on }}"
 
-on: [push]
+# on: [push]
 
-jobs:
-  hello_world_job:
-    runs-on: ubuntu-latest
-    name: A job to say hello
-    steps:
-      - uses: actions/checkout@v3
-      - id: foo
-        uses: socialdatabase/gh-actions-runner@test-workflow
-        with:
-          runner_cfg_pat: ${{ secrets.RUNNER_CFG_PAT }}
-      - run: echo random-number ${{ steps.foo.outputs.random-number }}
-        shell: bash
-      - run: echo random-number ${{ steps.foo.outputs.runs-on }}
-        shell: bash
+# jobs:
+#   hello_world_job:
+#     runs-on: ubuntu-latest
+#     name: A job to say hello
+#     steps:
+#       - uses: actions/checkout@v3
+#       - id: foo
+#         uses: socialdatabase/gh-actions-runner@test-workflow
+#         with:
+#           runner_cfg_pat: ${{ secrets.RUNNER_CFG_PAT }}
+#       - run: echo random-number ${{ steps.foo.outputs.random-number }}
+#         shell: bash
+#       - run: echo random-number ${{ steps.foo.outputs.runs-on }}
+#         shell: bash
