--- a/.github/workflows/test-reusable-workflow.yml
+++ b/.github/workflows/test-reusable-workflow.yml
@@ -15,26 +15,12 @@ jobs:
       - run: echo runs on ${{ steps.get-runs-on.outputs.runs-on }}
         shell: bash
 
-#   # test:
-#   #   # runs-on: [ "${{ steps.get-runs-on.outputs.runs-on }}" ]
-#   #   runs-on: ubuntu-latest
-#   #   steps:
-#   #     - run: echo "${{ steps.get-runs-on.outputs }}"
-#   #     - run: echo "${{ steps.get-runs-on.outputs.runs-on }}"
-
-# on: [push]
-
-# jobs:
-#   hello_world_job:
-#     runs-on: ubuntu-latest
-#     name: A job to say hello
-#     steps:
-#       - uses: actions/checkout@v3
-#       - id: foo
-#         uses: socialdatabase/gh-actions-runner@test-workflow
-#         with:
-#           runner_cfg_pat: ${{ secrets.RUNNER_CFG_PAT }}
-#       - run: echo random-number ${{ steps.foo.outputs.random-number }}
-#         shell: bash
-#       - run: echo random-number ${{ steps.foo.outputs.runs-on }}
-#         shell: bash
+  test:
+    # runs-on: [ "${{ steps.get-runs-on.outputs.runs-on }}" ]
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "${{ steps.get-runs-on.outputs }}"
+        shell: bash
+      - run: echo "${{ steps.get-runs-on.outputs.runs-on }}"
+        shell: bash 
+        id: test
