--- a/.github/workflows/test-reusable-workflow.yml
+++ b/.github/workflows/test-reusable-workflow.yml
@@ -6,21 +6,23 @@ on:
 jobs:
   get-runs-on:
     runs-on: ubuntu-latest
+    outputs:
+      runs-on: ${{ steps.set-runs-on.outputs.runs-on }}
     steps:
       - uses: actions/checkout@v3
       - uses: socialdatabase/gh-actions-runner@test-workflow
         id: get-runs-on
         with:
           runner_cfg_pat: ${{ secrets.RUNNER_CFG_PAT }}
-      - run: echo runs on ${{ steps.get-runs-on.outputs.runs-on }}
+      - run: echo "runs-on=${{ steps.get-runs-on.outputs.runs-on }}" >> $GITHUB_OUTPUT
+        id: set-runs-on
         shell: bash
 
   test:
     # runs-on: [ "${{ steps.get-runs-on.outputs.runs-on }}" ]
     runs-on: ubuntu-latest
+    needs: get-runs-on
     steps:
-      - run: echo "${{ steps.get-runs-on.outputs }}"
-        shell: bash
-      - run: echo "${{ steps.get-runs-on.outputs.runs-on }}"
+      - run: echo "${{ needs.get-runs-on.outputs.runs-on }}"
         shell: bash 
-        id: test
+
