--- a/.github/workflows/test-reusable-workflow.yml
+++ b/.github/workflows/test-reusable-workflow.yml
@@ -17,12 +17,15 @@ jobs:
       - run: echo "runs-on=${{ steps.get-runs-on.outputs.runs-on }}" >> $GITHUB_OUTPUT
         id: set-runs-on
         shell: bash
+      - run: echo  ${{github.event.repository.updated_at }} 
+        shell: bash
 
-  test:
-    # runs-on: [ "${{ steps.get-runs-on.outputs.runs-on }}" ]
-    runs-on: ubuntu-latest
-    needs: get-runs-on
-    steps:
-      - run: echo "${{ needs.get-runs-on.outputs.runs-on }}"
-        shell: bash 
+  # test:
+  #   # runs-on: [ ${{ needs.get-runs-on.outputs.runs-on }} ]
+  #   runs-on: ubuntu-latest
+  #   if: ${{github.event.repository.updated_at}} 
+  #   needs: get-runs-on
+  #   steps:
+  #     - run: echo ${{ needs.get-runs-on.outputs.runs-on }}
+  #       shell: bash 
 
